--- a/frontend/homepage/homepage.html
+++ b/frontend/homepage/homepage.html
@@ -11,7 +11,7 @@
                 <li><a href="../employees/employees.html">Danh sách nhân viên</a></li>
                 <li><a href="../users/users.html">Danh sách tài khoản</a></li>
                 <li><a href="../timesheets/timesheets.html">Chấm công</a></li>
-                <li><a href="#">Báo cáo</a></li>
+                <li><a href="../report/report.html">Báo cáo</a></li>
             </div>
             <li>
                 <div class = "user-infor">
