--- a/frontend/report/report.html
+++ b/frontend/report/report.html
@@ -14,19 +14,32 @@
                 <!-- Bộ lọc chọn tháng -->
                 <label for="month-select">Chọn tháng:</label>
                 <select id="month-select">
-                    <option value="1">Tháng 1</option>
-                    <option value="2">Tháng 2</option>
-                    <option value="3">Tháng 3</option>
-                    <option value="4">Tháng 4</option>
-                    <option value="5">Tháng 5</option>
-                    <option value="6">Tháng 6</option>
-                    <option value="7">Tháng 7</option>
-                    <option value="8">Tháng 8</option>
-                    <option value="9">Tháng 9</option>
+                    <option value="01">Tháng 1</option>
+                    <option value="02">Tháng 2</option>
+                    <option value="03">Tháng 3</option>
+                    <option value="04">Tháng 4</option>
+                    <option value="05">Tháng 5</option>
+                    <option value="06">Tháng 6</option>
+                    <option value="07">Tháng 7</option>
+                    <option value="08">Tháng 8</option>
+                    <option value="09">Tháng 9</option>
                     <option value="10">Tháng 10</option>
                     <option value="11">Tháng 11</option>
                     <option value="12">Tháng 12</option>
                 </select>
+
+                <label for="year-select">Chọn năm:</label>
+                <select id="year-select">
+                    <option value="2024">Năm 2024</option>
+                    <option value="2025">Năm 2025</option>
+                    <option value="2026">Năm 2026</option>
+                    <option value="2027">Năm 2027</option>
+                    <option value="2028">Năm 2028</option>
+                    <option value="2029">Năm 2029</option>
+                    <option value="2030">Năm 2030</option>
+                </select>
+            
+                <button class = "bt-show">Xem báo cáo</button>
             
                 <table class="report-table">
                     <thead>
@@ -35,11 +48,13 @@
                             <th>Họ và tên</th>
                             <th>Số ngày công</th>
                             <th>Lương tháng</th>
+                            <th>Tháng</th>
                         </tr>
                     </thead>
                     <tbody id="report-body">
                         <!-- Dữ liệu sẽ được thêm vào đây -->
                          <tr>
+                            <td>---</td>
                             <td>---</td>
                             <td>---</td>
                             <td>---</td>
